Fix handling of tokens containing whitespaces because they were split by CandidateGenerator_Grapheme